--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
     <string name="app_name">FinalProj_App</string>
     <string name="title_activity_pager">PagerActivity</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_login">Sign in</string>
 
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <!-- Strings related to login, most are unused -->
+    <string name="prompt_email">Username</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -15,4 +13,15 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+
+    <!-- Strings related to fragment 1: settings -->
+    <string name="section_format">Hello World from section: %1$d</string>
+
+
+    <!-- Strings related to fragment 2: control -->
+
+
+    <!-- Strings related to fragment 3: camera -->
+
+
 </resources>
