--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
     <!-- Strings related to fragment 1: settings -->
     <string name="section_format">Hello World from section: %1$d</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
     <!-- Strings related to fragment 2: control -->
 
