--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">FinalProj_App</string>
     <string name="title_activity_pager">PagerActivity</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="default_notification_channel_id">default</string>
 
     <!-- Strings related to login, most are unused -->
     <string name="prompt_email">Username</string>
