Moved the toast text to Strings.xml

--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="login_failure">Incorrect username or password</string>
 
     <!-- Strings related to fragment 1: settings -->
     <string name="section_format">Hello World from section: %1$d</string>
