--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">FinalProj_App</string>
     <string name="title_activity_pager">PagerActivity</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="error">!ERROR!</string>
 
     <!-- Strings related to messaging service -->
     <string name="default_notification_channel_id">default</string>
@@ -18,21 +19,24 @@
     <string name="error_field_required">This field is required</string>
     <string name="login_failure">Incorrect username or password</string>
 
-
-
+    <!-- Strings related to the overall pager activity -->
     <string-array name="page_title_short">
         <item>Sensor Config</item>
         <item>Control</item>
         <item>Camera View</item>
     </string-array>
-    <!-- Strings related to fragment 1: settings -->
     <string name="section_format">Hello World from section: %1$d</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- Strings related to fragment 1: settings -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-
     <!-- Strings related to fragment 2: control -->
+    <string name="armtoggle_armed">ARMED</string>
+    <string name="armtoggle_disarmed">DISARMED</string>
+    <string name="armtoggle_label">Arm/Disarm System</string>
+    <string name="autologin_label">Enable Autologin</string>
+    <string name="logout_button_label">Logout</string>
+    <string name="whoami_label">Logged in as: <b>%1$s</b></string>
+    <string name="timeout_threshold_label">Timeout Threshold\n(minutes)</string>
 
 
     <!-- Strings related to fragment 3: camera -->
