--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -10,14 +10,15 @@
 
     <!-- Strings related to login, most are unused -->
     <string name="prompt_email">Username</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_password">Password (6+ chars)</string>
+    <string name="action_sign_in">Sign in!</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="login_failure">Incorrect username or password</string>
+
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="login_failure">Incorrect username or password</string>
 
     <!-- Strings related to the overall pager activity -->
     <string-array name="page_title_short">
