Fixed the broken "does this fragment exist" code, now the ControlFrag is totally done except for everything relating to the timeout

--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -37,7 +37,9 @@
     <string name="autologin_label">Enable Autologin</string>
     <string name="logout_button_label">Logout</string>
     <string name="whoami_label">Logged in as: <b>%1$s</b></string>
-    <string name="timeout_threshold_label">Timeout Threshold\n(minutes)</string>
+    <string name="timeout_threshold_label">Timeout Threshold\n(seconds)</string>
+    <string name="status_connected">Connection status: <b>Normal</b></string>
+    <string name="status_disconnected">Connection status: <b>DISCONNECTED</b></string>
 
 
     <!-- Strings related to fragment 3: camera -->
