work in progress: now able to save image to local storage, read from local storage, and pipe it into a bitmap

--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="save_image_label">Save to Local</string>
     <string name="download_hires_label">Download Hires Image</string>
     <string name="begin_voip_label">Begin VOIP Call</string>
-    <string name="end_voip_label">End VOIP Call</string>
+    <string name="end_voip_label">End Call</string>
 
 
 </resources>
