--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -26,8 +26,10 @@
         <item>Control</item>
         <item>Camera View</item>
     </string-array>
-    <string name="section_format">Hello World from section: %1$d</string>
     <!-- Strings related to fragment 1: settings -->
+    <string name="config_page_label">Use this to add/remove/replace sensors on the device</string>
+    <string name="apply_label">Apply Changes</string>
+    <string name="reset_label">Revert Changes</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Strings related to fragment 2: control -->
@@ -36,11 +38,11 @@
     <string name="armtoggle_label">Arm/Disarm System</string>
     <string name="autologin_label">Enable Autologin</string>
     <string name="logout_button_label">Logout</string>
+    <!-- note: for some reason, html formatting doesn't work with a substitution string like this :( -->
     <string name="whoami_label">Logged in as: <b>%1$s</b></string>
     <string name="timeout_threshold_label">Timeout Threshold\n(seconds)</string>
     <string name="status_connected">Connection status: <b>Normal</b></string>
     <string name="status_disconnected">Connection status: <b>DISCONNECTED</b></string>
-
 
     <!-- Strings related to fragment 3: camera -->
     <string name="blind_people_text">security camera image</string>
