--- a/FinalProj_App/app/src/main/res/values/strings.xml
+++ b/FinalProj_App/app/src/main/res/values/strings.xml
@@ -30,7 +30,12 @@
     <string name="config_page_label">Use this to add/remove/replace sensors on the device</string>
     <string name="apply_label">Apply Changes</string>
     <string name="reset_label">Revert Changes</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="sensor_types_array">
+        <item>Disconnected</item>
+        <item>Contact sensor</item>
+        <item>Vibration sensor</item>
+    </string-array>
+
 
     <!-- Strings related to fragment 2: control -->
     <string name="armtoggle_armed">ARMED</string>
